css/styles.css
:root {
    --neon-green: #69ff00;
    --dark-green: #147600;
    --neon-pink: #E80985;
    --dark-pink: #7C0087;
}

@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,700;1,400;1,700&display=swap');

@font-face {
    font-family: 'NeueBit-Bold';
    src: url('../assets/NeueBit-Bold/NeueBit-Bold.woff') format('woff');
    font-weight: bold;
}

body {
    background-color: black;
    color: var(--neon-green);
    font-family: 'Epilogue', sans-serif;
    height: 100%;
}

html,
body {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

h1 {
    font-size: 2.5rem;
}

h1#header {
    font-size: 6.5rem;
    font-family: 'NeueBit-Bold', sans-serif;
    margin: 0;
    text-shadow: 3px 3px 0 var(--dark-green), 6px 6px 0 var(--neon-pink), 9px 9px 0 var(--dark-pink);
    text-align: center;
}

@media screen and (max-width: 800px) {
    h1#header {
        font-size: 5rem;
    }
}

@media screen and (min-width: 800px) {
    h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
        display: none;
    }
}

h2 {
    font-size: 1.5rem;
}

/*
div#cassetteDiv {
    height: 50%
}
*/

.vertical-centering-container {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    width: 100%;
}

.pink {
    color: var(--neon-pink);
}

.green {
    color: var(--neon-green);
}

button.cornered {
    background-color: var(--neon-green);
    color: black;
    border: none;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    border-radius: 50%;
    cursor: pointer;
    width: 1.75rem;
    height: 1.75rem;
    position: absolute;
    bottom: 10px;
    right: 10px;
    font-size: 2rem;
}

button.cornered:active {
    background-color: var(--dark-green);
}

div#popup-info {
    background-color: var(--neon-green);
    color: black;
    position: absolute;
    bottom: 47px;
    right: 10px;
    width: 10rem;
    padding: 1rem;
    display: inline-block;
    border-radius: 2px;
    font-size: 1rem;
}

p#info-text {
    margin: 0;
}

div#event-info {
    font-size: 1.25rem;
}

div.QRDiv {
    text-align: center;
    width: 300px;
}

.collapsibleProject {
    width: 20rem;
    font-size: 1rem;
    margin-bottom: 5px;
}

summary {
    font-size: 1.1rem;
}

.top-nav {
    text-align: center;
    position: fixed;
    top: 0.5rem;
    width: 100%;
    font-size: 2rem;
    font-family: 'NeueBit-Bold', sans-serif;
}

